fixed jump

--- a/css/styles.css
+++ b/css/styles.css
@@ -409,13 +409,13 @@ background: rgba(2, 2, 2, 0.5);
 
 .buttonjob .line:nth-child(1) {
   transform-origin: 100% 100%;
-  height: 1px;
+  height: 3px;
   width: 20%;
   bottom: 0;
 }
 .buttonjob .line:nth-child(4) {
   transform-origin: 0 100%;
-  height: 1px;
+  height: 3px;
   width: 20%;
   top: -1px;
   right: 0;
@@ -436,14 +436,14 @@ background: rgba(2, 2, 2, 0.5);
 }
 .buttonjob .line:nth-child(3) {
   transform-origin: 0 100%;
-  height: 1px;
+  height: 3px;
   width: 100%;
   top: -1px;
   left: -1px;
 }
 .buttonjob .line:nth-child(6) {
   transform-origin: 100% 0;
-  height: 1px;
+  height: 3px;
   width: 100%;
   bottom: 0;
   right: -1px;
@@ -10125,7 +10125,6 @@ body {
   }
   #mainNav.navbar-shrink .nav-link {
     color: #fff;
-    padding: 1.5rem 1.5rem 1.25rem;
     border-bottom: 0.25rem solid transparent;
   }
   #mainNav.navbar-shrink .nav-link:hover {
